Fix overflow on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -727,5 +727,7 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	max-width: 95%;
+	min-width: 0;
 }
+
 
